--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
@@ -1,4 +1,4 @@
-% Created 2020-10-26 seg 15:56
+% Created 2020-10-28 qua 18:19
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -29,6 +29,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \usepackage{attachfile}
 \usepackage{setspace}
 \usepackage{tikz}
+\usepackage{longtable, pdflscape, booktabs}
 \author{Gabriel Petrini (PED)}
 \date{2020/2S}
 \title{Notas CE 342/C}
@@ -36,99 +37,126 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 \maketitle
 
+\section{Lista de presença e notas}
+\label{sec:org18ec1b5}
+\subsection{Lista de chamada com nota das resenhas}
+\label{sec:org205a241}
+\small{\begin{landscape}
+\begin{longtable}{llrrrl}
+\toprule
+{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &                   Email \\
+RA     &                                        &                       &             &             &                         \\
+\midrule
+\endhead
+\midrule
+\multicolumn{6}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+230645 &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &  a230645@dac.unicamp.br \\
+213549 &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &  b213549@dac.unicamp.br \\
+257748 &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &  b257748@dac.unicamp.br \\
+232568 &                 caio cimino de almeida &                  70.0 &         NaN &        2.65 &  c232568@dac.unicamp.br \\
+233566 &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &  d233566@dac.unicamp.br \\
+215626 &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &  f215626@dac.unicamp.br \\
+91108  &                 felipe eboli sotorilli &                   NaN &        1.79 &        0.00 &   f91108@dac.unicamp.br \\
+234311 &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &  f234311@dac.unicamp.br \\
+216397 &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &  g216397@dac.unicamp.br \\
+197474 &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &  g197474@dac.unicamp.br \\
+234982 &                 gabriel pereira santos &                   0.0 &         NaN &       13.27 &  g234982@dac.unicamp.br \\
+235042 &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &  g235042@dac.unicamp.br \\
+197724 &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &  g197724@dac.unicamp.br \\
+217350 &       guilherme yoshio agata domingues &                  30.0 &         NaN &         NaN &  g217350@dac.unicamp.br \\
+174154 &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &  g174154@dac.unicamp.br \\
+237534 &         joao mateus rodrigues da silva &                  30.0 &         NaN &         NaN &  j237534@dac.unicamp.br \\
+237856 &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &  j237856@dac.unicamp.br \\
+199967 &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &  j199967@dac.unicamp.br \\
+103034 &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &  l103034@dac.unicamp.br \\
+172577 &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &  l172577@dac.unicamp.br \\
+159866 &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &  m159866@dac.unicamp.br \\
+221896 &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &  m221896@dac.unicamp.br \\
+257876 &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &  m257876@dac.unicamp.br \\
+242087 &                          miguel razera &                   0.0 &        0.89 &        1.77 &  m242087@dac.unicamp.br \\
+242328 &    natalia kimberlle tavares imperiano &                  50.0 &         NaN &         NaN &  n242328@dac.unicamp.br \\
+147614 &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &  p147614@dac.unicamp.br \\
+176104 &              rafael da silva tomasella &                   0.0 &         NaN &         NaN &  r176104@dac.unicamp.br \\
+205149 &                 raphaela freitas souza &                 100.0 &         NaN &         NaN &  r205149@dac.unicamp.br \\
+205151 &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &  r205151@dac.unicamp.br \\
+244207 &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &  s244207@dac.unicamp.br \\
+158425 &                           tales alonso &                  50.0 &        0.89 &       61.95 &  t158425@dac.unicamp.br \\
+257932 &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &  t257932@dac.unicamp.br \\
+177964 &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &  v177964@dac.unicamp.br \\
+245099 &                            victor maia &                  50.0 &       16.07 &       53.98 &  v245099@dac.unicamp.br \\
+206806 &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &  v206806@dac.unicamp.br \\
+225851 &                william de sousa rabelo &                  50.0 &         NaN &         NaN &  w225851@dac.unicamp.br \\
+\end{longtable}
+\end{landscape}}
+
+
+
 \section{Monetaristas}
-\label{sec:orgc86dc73}
+\label{sec:org62901d9}
 
-\begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{ipython}
-df = pd.read_csv('./Notas/Monetaristas.csv')[["Endereço de e-mail", "Nota", "Status da atividade"]]
-df["RA"] = [i[1:7] for i in  df["Endereço de e-mail"]]
-df.drop(["Endereço de e-mail", "Status da atividade"], axis="columns", inplace=True)
-df.set_index("RA", inplace=True)
-df.columns = ["Monetaristas"]
-df
-\end{minted}
+\subsection{Pendências}
+\label{sec:org7b1773e}
 
-\begin{verbatim}
-        Monetaristas
-RA                  
-230645          50.0
-213549          30.0
-257748          50.0
-232568          70.0
-233566          30.0
-215626           0.0
-091108          50.0
-234311          50.0
-216397          30.0
-197474          50.0
-234982           0.0
-235042           0.0
-197724          50.0
-217350          30.0
-174154          30.0
-237534          30.0
-199967          70.0
-237856          50.0
-103034          50.0
-172577          50.0
-159866          50.0
-221896          70.0
-257876         100.0
-242087           0.0
-242328          50.0
-147614           0.0
-176104           0.0
-205149         100.0
-205151           0.0
-244207          70.0
-158425          50.0
-257932         100.0
-177964          70.0
-245099          50.0
-206806          50.0
-225851          50.0
-\end{verbatim}
+\subsection{Notas}
+\label{sec:org1b4829c}
 
+\begin{tabular}{lr}
+\toprule
+{} &  Resenha Monetaristas \\
+RA     &                       \\
+\midrule
+230645 &                  50.0 \\
+213549 &                  30.0 \\
+257748 &                  50.0 \\
+232568 &                  70.0 \\
+233566 &                  30.0 \\
+215626 &                   0.0 \\
+91108  &                   NaN \\
+234311 &                  50.0 \\
+216397 &                  30.0 \\
+197474 &                  50.0 \\
+234982 &                   0.0 \\
+235042 &                   0.0 \\
+197724 &                  50.0 \\
+217350 &                  30.0 \\
+174154 &                  30.0 \\
+237534 &                  30.0 \\
+237856 &                  50.0 \\
+199967 &                  70.0 \\
+103034 &                  50.0 \\
+172577 &                  50.0 \\
+159866 &                  50.0 \\
+221896 &                  70.0 \\
+257876 &                 100.0 \\
+242087 &                   0.0 \\
+242328 &                  50.0 \\
+147614 &                   0.0 \\
+176104 &                   0.0 \\
+205149 &                 100.0 \\
+205151 &                   0.0 \\
+244207 &                  70.0 \\
+158425 &                  50.0 \\
+257932 &                 100.0 \\
+177964 &                  70.0 \\
+245099 &                  50.0 \\
+206806 &                  50.0 \\
+225851 &                  50.0 \\
+\bottomrule
+\end{tabular}
 
-\url{file:///tmp/ob-ipython-htmlHcT30A.html}
-
-\begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{ipython}
-fig, ax = plt.subplots(1,2, figsize=(8,5), sharey=True)
-
-sns.distplot(df['Monetaristas'], hist=True, kde=True, 
-             bins=int(10), color = 'darkblue', 
-             hist_kws={'edgecolor':'black'}, ax=ax[0],
-             kde_kws={'linewidth': 4, 'shade': True})
-
-ax[0].set_title('Nota das resenhas\nTurma C')
-ax[0].text(90, 0.03, f'$\mu = ${df["Monetaristas"].mean().round(1)/10}', fontsize=12)
-ax[0].text(90, 0.027, f'$\sigma = ${df["Monetaristas"].std().round(1)/10}', fontsize=12)
-
-sns.distplot(df[df['Monetaristas']>0]['Monetaristas'], hist=True, kde=True, 
-             bins=int(10), color = 'darkblue', 
-             hist_kws={'edgecolor':'black'}, ax=ax[1],
-             kde_kws={'linewidth': 4, 'shade': True})
-
-ax[1].set_title('Nota das resenhas\n(Exceto não entregues)')
-ax[1].text(90, 0.03, f"$\mu = ${df[df['Monetaristas']>0]['Monetaristas'].mean().round(1)/10}", fontsize=12)
-ax[1].text(90, 0.027, f"$\sigma = ${round(df[df['Monetaristas']>0]['Monetaristas'].std())/10}", fontsize=12)
-ax[1].set_ylabel('Densidade')
-
-plt.tight_layout()
-plt.show()
-\end{minted}
-
-\emph{home/gpetrini}.local/lib/python3.8/site-packages/seaborn/distributions.py:2551: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).
-  warnings.warn(msg, FutureWarning)
-\emph{home/gpetrini}.local/lib/python3.8/site-packages/seaborn/distributions.py:2551: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).
-  warnings.warn(msg, FutureWarning)
-
-\begin{verbatim}
-<Figure size 576x360 with 2 Axes>
-\end{verbatim}
-
+\subsection{Gráficos}
+\label{sec:org866e68b}
 
 \begin{center}
-\includegraphics[width=.9\linewidth]{obipy-resources/8f0e11a6005cb70041688b819f26537d6c776922/08ba3cdf3bafa2b261d41af57b078c27e75669ef.png}
+\includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
+\end{center}
+
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 \end{document}
