--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
@@ -4,127 +4,299 @@
 #+DATE: 2020/2S
 #+PROPERTY: COLUMNS %RA %TAREFA(Tarefa) %NOTA(Nota)
 #+EXCLUDE_TAGS: private noexport
-#+PROPERTY: header-args:ipython  :session *Turma_A* :exports results results: output
+#+PROPERTY: header-args:python  :session *Turma_A* :python /usr/bin/python3 :exports results
+#+LATEX_HEADER: \usepackage{longtable, pdflscape, booktabs}
+
+#+RESULTS:
 
 * Configuração                                                     :noexport:
 
-#+BEGIN_SRC ipython
+** Pacotes
+#+BEGIN_SRC python
 import pandas as pd
 import matplotlib.pyplot as plt
 import seaborn as sns
+import datetime
+import numpy as np
+import sympy as sp
+
+Turma = "A"
+
+Resenhas = ["Monetaristas", "Novos Clássicos", "Novos Keynesianos", "Novo Consenso"]
 #+END_SRC
 
 #+RESULTS:
-:results:
-# Out [4]: 
-:end:
+
+** Importando tabela Ana Rosa
+
+#+BEGIN_SRC python :export no
+df = pd.read_excel(
+    '../Lista presença 2020.xlsx',
+    sheet_name="CE342_" + Turma,
+    parse_dates=True,
+)
+df["Nome"] = [nome.lower().strip() for nome in df["Nome"]] # Covert to lower case
+df.set_index(["Nome"], inplace=True)
+df.drop(["Unnamed: 17", "Unnamed: 18"], axis='columns', inplace=True) # Removendo coluna vazia e coluna de e-mails (é possível inferir)
+#df.columns = pd.to_datetime(df.columns, errors='ignore', format='%Y-%m-%d')
+min_df = df[["RA"]].astype(str)
+#+END_SRC
+
+#+RESULTS:
+
+** Funções
+
+#+BEGIN_SRC python
+def importar_ext(Turma="A", data="2020-10-19"):
+    tmp = pd.read_csv(
+        f'./Presença/Turma_{Turma} ({data}).csv',
+        skiprows=3,
+        usecols=[0,6,7],
+        sep=',',
+    )
+
+    tmp["Nome"] = [nome.lower() for nome in tmp["Names"]]
+
+    tmp["Tempo"] = [float(str(i).replace('"', '')) for i in tmp[' "# of Checks"']]
+    tmp["Entrada"] = [float(str(i).replace('"', '')) for i in tmp[' "Joined"']]
+    tmp.set_index(['Nome'], inplace=True)
+    tmp[f"{data}"] = ((tmp["Tempo"]/np.max(tmp["Tempo"]))*100).round(2)
+    tmp = tmp[:-2][[f"{data}"]].fillna(0) # Descartando rodapé
+    #midx = pd.MultiIndex.from_product([[f'{data}'], ['Presença', 'Entrada']], names=['Data', f'Turma {Turma}']) # criando multiindex
+    #tmp = pd.DataFrame(tmp, columns=midx) # Criando df com multindex
+
+    return tmp
+
+
+#+END_SRC
+
+#+RESULTS:
+
+
+** Merge e exportação
+
+#+BEGIN_SRC python
+monetaristas = pd.read_csv('./Notas/Monetaristas.csv')[["Endereço de e-mail", "Nota", "Status da atividade"]]
+monetaristas["RA"] = [i[1:7] for i in  monetaristas["Endereço de e-mail"]]
+monetaristas.drop(["Endereço de e-mail", "Status da atividade"], axis="columns", inplace=True)
+monetaristas.set_index("RA", inplace=True)
+monetaristas.columns = ["Resenha Monetaristas"]
+
+df = min_df.reset_index().merge(
+    monetaristas.reset_index(),
+    how='left',
+    ).join(
+    importar_ext(Turma='A', data="2020-10-19"),
+    how='left', on='Nome'
+    ).join(
+        importar_ext(Turma='A', data="2020-10-26"),
+        how='left', on='Nome'
+    ).set_index('RA')
+
+df["Email"] = [df["Nome"][i][0] + df.index[i] + "@dac.unicamp.br" for i in range(len(df.index))]
+
+df.to_csv(f'./output/CE342_{Turma}.csv')
+df.to_excel(f'./output/CE342_{Turma}.xlsx')
+
+#+END_SRC
+
+#+RESULTS:
+
+* Lista de presença e notas
+** Lista de chamada com nota das resenhas
+#+NAME:Lista
+#+BEGIN_SRC python :results table latexprint('\small{\\begin{landscape}')
+print(df.to_latex(longtable=True), end='')
+print('\end{landscape}}')
+#+END_SRC
+
+#+RESULTS: Lista
+#+begin_export latex
+\small{\begin{landscape}
+\begin{longtable}{llrrrl}
+\toprule
+{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &                   Email \\
+RA     &                                       &                       &             &             &                         \\
+\midrule
+\endhead
+\midrule
+\multicolumn{6}{r}{{Continued on next page}} \\
+\midrule
+\endfoot
+
+\bottomrule
+\endlastfoot
+212883 &                    ana pasti villalba &                  50.0 &         NaN &         NaN &  a212883@dac.unicamp.br \\
+212900 &                     ana paula martins &                  50.0 &        0.00 &        0.00 &  a212900@dac.unicamp.br \\
+231302 &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &  a231302@dac.unicamp.br \\
+231732 &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &  a231732@dac.unicamp.br \\
+213360 &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &  a213360@dac.unicamp.br \\
+231898 &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &  b231898@dac.unicamp.br \\
+213731 &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &  b213731@dac.unicamp.br \\
+232395 &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &  b232395@dac.unicamp.br \\
+232796 &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &  c232796@dac.unicamp.br \\
+233335 &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &  d233335@dac.unicamp.br \\
+233747 &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &  e233747@dac.unicamp.br \\
+255207 &                  fernanda lima santos &                  50.0 &         NaN &         NaN &  f255207@dac.unicamp.br \\
+216459 &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &  g216459@dac.unicamp.br \\
+235951 &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &  g235951@dac.unicamp.br \\
+236276 &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &  g236276@dac.unicamp.br \\
+218090 &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &  i218090@dac.unicamp.br \\
+255241 &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &  i255241@dac.unicamp.br \\
+237618 &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &  j237618@dac.unicamp.br \\
+199735 &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &  j199735@dac.unicamp.br \\
+218975 &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &  j218975@dac.unicamp.br \\
+238414 &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &  j238414@dac.unicamp.br \\
+219613 &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &  k219613@dac.unicamp.br \\
+219907 &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &  l219907@dac.unicamp.br \\
+239052 &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &  l239052@dac.unicamp.br \\
+220194 &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &  l220194@dac.unicamp.br \\
+201326 &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &  l201326@dac.unicamp.br \\
+156242 &                 leticia da silva cruz &                   0.0 &         NaN &         NaN &  l156242@dac.unicamp.br \\
+240317 &                       luis felipe avi &                  30.0 &         NaN &       30.77 &  l240317@dac.unicamp.br \\
+240409 &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &  l240409@dac.unicamp.br \\
+221515 &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &  m221515@dac.unicamp.br \\
+255293 &         maria júlia faustino da silva &                  30.0 &         NaN &         NaN &  m255293@dac.unicamp.br \\
+241430 &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &  m241430@dac.unicamp.br \\
+222315 &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &  m222315@dac.unicamp.br \\
+184528 &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &  m184528@dac.unicamp.br \\
+222615 &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &  m222615@dac.unicamp.br \\
+186966 &     samuel henrique rezende bernardes &                   0.0 &         NaN &         NaN &  s186966@dac.unicamp.br \\
+244321 &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &  s244321@dac.unicamp.br \\
+244379 &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &  s244379@dac.unicamp.br \\
+187323 &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &  t187323@dac.unicamp.br \\
+206194 &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &  t206194@dac.unicamp.br \\
+245212 &          victoria silva torres santos &                 100.0 &         NaN &         NaN &  v245212@dac.unicamp.br \\
+206883 &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &  v206883@dac.unicamp.br \\
+245459 &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &  v245459@dac.unicamp.br \\
+\end{longtable}
+\end{landscape}}
+#+end_export
+
+
 
 * Monetaristas
 
+** Pendências
+  
 - Checar Eduardo Vinicius de oliveira 215242
 - Nomes sobre moeda não importante Keynes
 
-#+BEGIN_SRC ipython output: table
-df = pd.read_csv('./Notas/Monetaristas.csv')[["Endereço de e-mail", "Nota", "Status da atividade"]]
-df["RA"] = [i[1:7] for i in  df["Endereço de e-mail"]]
-df.drop(["Endereço de e-mail", "Status da atividade"], axis="columns", inplace=True)
-df.set_index("RA", inplace=True)
-df.columns = ["Monetaristas"]
-df
+** Notas
+
+#+NAME:Monetaristas
+#+BEGIN_SRC python :results table latex
+print(df[["Resenha Monetaristas"]].to_latex(),end='');
 #+END_SRC
 
-#+RESULTS:
-:results:
-# Out [5]: 
-# text/plain
-:         Monetaristas
-: RA                  
-: 212883          50.0
-: 212900          50.0
-: 231302          70.0
-: 231732           0.0
-: 213360          70.0
-: 231898          70.0
-: 213731          70.0
-: 232395          30.0
-: 232796          70.0
-: 233335          50.0
-: 233747          70.0
-: 255207          50.0
-: 216459           0.0
-: 235951          30.0
-: 236276           0.0
-: 218090          70.0
-: 255241          50.0
-: 199735          50.0
-: 237618          70.0
-: 218975          70.0
-: 238414          70.0
-: 219613          50.0
-: 219907         100.0
-: 239052          70.0
-: 220194          70.0
-: 201326          50.0
-: 156242           0.0
-: 240317          30.0
-: 240409          70.0
-: 221515          50.0
-: 255293          30.0
-: 241430          50.0
-: 222315          50.0
-: 184528          50.0
-: 222615          70.0
-: 186966           0.0
-: 244321          50.0
-: 244379          50.0
-: 187323         100.0
-: 206194          50.0
-: 245212         100.0
-: 206883           0.0
-: 245459          70.0
+#+RESULTS: Monetaristas
+#+begin_export latex
+\begin{tabular}{lr}
+\toprule
+{} &  Resenha Monetaristas \\
+RA     &                       \\
+\midrule
+212883 &                  50.0 \\
+212900 &                  50.0 \\
+231302 &                  70.0 \\
+231732 &                   0.0 \\
+213360 &                  70.0 \\
+231898 &                  70.0 \\
+213731 &                  70.0 \\
+232395 &                  30.0 \\
+232796 &                  70.0 \\
+233335 &                  50.0 \\
+233747 &                  70.0 \\
+255207 &                  50.0 \\
+216459 &                   0.0 \\
+235951 &                  30.0 \\
+236276 &                   0.0 \\
+218090 &                  70.0 \\
+255241 &                  50.0 \\
+237618 &                  70.0 \\
+199735 &                  50.0 \\
+218975 &                  70.0 \\
+238414 &                  70.0 \\
+219613 &                  50.0 \\
+219907 &                 100.0 \\
+239052 &                  70.0 \\
+220194 &                  70.0 \\
+201326 &                  50.0 \\
+156242 &                   0.0 \\
+240317 &                  30.0 \\
+240409 &                  70.0 \\
+221515 &                  50.0 \\
+255293 &                  30.0 \\
+241430 &                  50.0 \\
+222315 &                  50.0 \\
+184528 &                  50.0 \\
+222615 &                  70.0 \\
+186966 &                   0.0 \\
+244321 &                  50.0 \\
+244379 &                  50.0 \\
+187323 &                 100.0 \\
+206194 &                  50.0 \\
+245212 &                 100.0 \\
+206883 &                   0.0 \\
+245459 &                  70.0 \\
+\bottomrule
+\end{tabular}
+#+end_export
 
-[[file:/tmp/ob-ipython-html5krrZR.html]]
-:end:
+** Gráfico
 
-#+BEGIN_SRC ipython
+#+BEGIN_SRC python :results graphics file :file ./figs/monetaristas.png
 fig, ax = plt.subplots(1,2, figsize=(8,5), sharey=True)
 
-sns.distplot(df['Monetaristas'], hist=True, kde=True, 
+sns.distplot(df['Resenha Monetaristas'], hist=True, kde=True, 
              bins=int(10), color = 'darkblue', 
              hist_kws={'edgecolor':'black'}, ax=ax[0],
              kde_kws={'linewidth': 4, 'shade': True})
 
-ax[0].set_title('Nota das resenhas\nTurma A')
-ax[0].text(90, 0.03, f'$\mu = ${df["Monetaristas"].mean().round(1)/10}', fontsize=12)
-ax[0].text(90, 0.027, f'$\sigma = ${df["Monetaristas"].std().round(1)/10}', fontsize=12)
+ax[0].set_title(f'Nota das resenhas\nTurma {Turma}')
+ax[0].text(90, 0.03, f'$\mu = ${df["Resenha Monetaristas"].mean().round(1)/10}', fontsize=12)
+ax[0].text(90, 0.027, f'$\sigma = ${df["Resenha Monetaristas"].std().round(1)/10}', fontsize=12)
 
 
-sns.distplot(df[df['Monetaristas']>0]['Monetaristas'], hist=True, kde=True, 
+sns.distplot(df[df['Resenha Monetaristas']>0]['Resenha Monetaristas'], hist=True, kde=True, 
              bins=int(10), color = 'darkblue', 
              hist_kws={'edgecolor':'black'}, ax=ax[1],
              kde_kws={'linewidth': 4, 'shade': True})
 
 ax[1].set_title('Nota das resenhas\n(Exceto não entregues)')
-ax[1].text(90, 0.03, f"$\mu = ${df[df['Monetaristas']>0]['Monetaristas'].mean().round(1)/10}", fontsize=12)
-ax[1].text(90, 0.027, f"$\sigma = ${round(df[df['Monetaristas']>0]['Monetaristas'].std())/10}", fontsize=12)
+ax[1].text(90, 0.03, f"$\mu = ${df[df['Resenha Monetaristas']>0]['Resenha Monetaristas'].mean().round(1)/10}", fontsize=12)
+ax[1].text(90, 0.027, f"$\sigma = ${round(df[df['Resenha Monetaristas']>0]['Resenha Monetaristas'].std())/10}", fontsize=12)
 ax[1].set_ylabel('Densidade')
 
 plt.tight_layout()
+fig.savefig('./figs/monetaristas.png')
+
 plt.show()
 #+END_SRC
 
 #+RESULTS:
-:results:
-# Out [9]: 
-# output
-/home/gpetrini/.local/lib/python3.8/site-packages/seaborn/distributions.py:2551: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).
-  warnings.warn(msg, FutureWarning)
-/home/gpetrini/.local/lib/python3.8/site-packages/seaborn/distributions.py:2551: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).
-  warnings.warn(msg, FutureWarning)
+[[file:./figs/monetaristas.png]]
 
-# text/plain
-: <Figure size 576x360 with 2 Axes>
+#+BEGIN_SRC python :results graphics file :file ./figs/monetaristas_presenca.png
+tmp = df.copy()
 
-# image/png
-[[file:obipy-resources/fb91f94cdd92525210d496d4f2faec4922a30e79/2c0a50ca3412c867da94c4032b1458d67ea942c7.png]]
-:end:
+tmp["Média presença"] = tmp[["2020-10-19", "2020-10-26"]].mean(axis=1)
+
+resenha = "Monetaristas"
+
+fig, ax = plt.subplots()
+
+sns.regplot(x="Média presença", y=f"Resenha {resenha}", data=tmp, ax=ax, y_jitter=.05);
+
+ax.set_title(f"Nota x Presença\nResenha {resenha} - Turma {Turma}")
+
+fig.savefig('./figs/monetaristas_presenca.png')
+
+plt.show()
+
+#+END_SRC
+
+#+RESULTS:
+[[file:./figs/monetaristas_presenca.png]]
+
+
